# tastyworksTaxes

./: .gitignore  LICENSE  LLM_REVIEW_quantity_sign_fix.md  README.md  converter.py  corporate_actions.csv  corporate_actions.yaml  history.py  main.py  money.py  position.py  printer.py  pyproject.toml  requirements.txt  tasty.py  transaction.py  values.py
.github/workflows/: tests.yml
tastyworksTaxes/: asset_classifier.py  asset_definitions.py  constants.py  fifo_processor.py  history.py  legacy.py  main.py  money.py  position.py  position_lot.py  position_manager.py  printer.py  tasty.py  trade_calculator.py  transaction.py  values.py
test/: 2018 - 2020-05.csv  2020-05 - 2020-12.csv  2021-2022.csv  2021.csv  closed-trades.csv  merged.csv  merged2.csv  merged3.csv  merged4.csv  tastytrade_transactions_history_180201_to_240817.csv  test_architecture_integration.py  test_asset_classifier.py  test_bft_psfe_symbol_change.py  test_converter.py  test_corporate_actions.py  test_fifo_logic.py  test_fund_warnings.py  test_gross_equity_etf_profits.py  test_history.py  test_legacy.py  test_money.py  test_nan_description_edge_cases.py  test_options_fifo_logic.py  test_position_manager.py  test_printer.py  test_printer_labels.py  test_quantity_sign_fix.py  test_reverse_split_config.py  test_tasty.py  test_tasty_add_position.py  test_tasty_get_combined_sum.py  test_tasty_get_yearly_trades.py  test_tasty_partial_closures.py  test_tasty_receive_deliver.py  test_tasty_reverse_split.py  test_tasty_run.py  test_transaction.py  transaction_history_Individual-60_05_27_2021 9_26 PM.csv  (+8 more)
