[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tastyworksTaxes"
version = "0.1.0"
description = "German tax helper for TastyTrade/Tastyworks transaction exports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "avion23" },
]
keywords = ["tax", "germany", "tastytrade", "tastyworks", "fifo", "options"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "pandas>=3.0.3",
    "currencyconverter>=0.18.18",
    "dataclasses_json>=0.6.7",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3"]

[project.urls]
Homepage = "https://github.com/avion23/tastyworksTaxes"
Repository = "https://github.com/avion23/tastyworksTaxes"
Issues = "https://github.com/avion23/tastyworksTaxes/issues"

[project.scripts]
tastyworks-taxes = "tastyworksTaxes.main:main"

[tool.pytest.ini_options]
testpaths = ["test"]
